[css-grid] "normal" alignment is "start" for replaced elements

"normal" alignment used to be "stretch" for all the elements,
however the CSS Grid Layout spec has been updated to change
this behavior for replaced elements:
https://github.com/w3c/csswg-drafts/issues/523

A few tests need to be updated due to this change.
We also take advantage to make
fast/css-grid-layout/grid-align-stretching-replaced-items.html
a testharness.js test so we can get rid of the expected file.

BUG=666961
TEST=external/csswg-test/css-grid-1/grid-items/grid-items-sizing-alignment-001.html

Review-Url: https://codereview.chromium.org/2722613003
Cr-Commit-Position: refs/heads/master@{#454133}

Former-commit-id: fad39c71033eea490d8437ca186529c8e87125c2